@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * FIX: ScribeJava shouldn't require all async http client provider to be on the classpath if using only one of them
+
 [2.7.2]
  * FIX: ScribeJava shouldn't require any async http client provider to be on the classpath (neither ning neither AHC)
 
